--- a/css/style.css
+++ b/css/style.css
@@ -1,75 +1,53 @@
 body{
-    margin: 0;
-    padding: 0;
+    font-size: 16px;
     overflow-x: hidden;
-    overflow: hidden;
-    background: #36a2bd;
 }
-.mathalu{
-    color: white;
+:root{
+    --btn:#eb9393;
+    --nav:#490707;
+}
+header{
     width: 100%;
-    height: 20px;
-    background: yellow;
+    display: flex;
+    justify-content: center;
+}
+nav{
+    background: var(--btn);
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    position: sticky;
+    top: 5px;
+}
+nav ul{
+    display: flex;
+    gap: 50px;
+}
+nav ul li{
+    background: var(--nav);
+    box-shadow: 0 3px white;
+    width: 4cm;
+    height: 2lh;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.mathalu a{
-    color: red;
-    font-weight: 800;
-    text-decoration: none;
-}
-/* header section */
-header{
-    background: #f0b8b8;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-}
-.name{
-    margin: 10px;
-    padding: 10px;
-    background: rgb(149, 149, 227);
-    border: 2px solid black;
-}
-.navbar{
-    right: 100px;
-    display: flex;
-    gap: 40px;
-}
-.navbar li{
-    list-style: none;
-    margin: 10px;
-    padding: 10px;
-    background: #a3e8a3;
-    color: black;
-    border: 1px solid black;
-    border-radius: 10px;
-}
-.navbar li a{
-    text-decoration: none;
-    text-transform: uppercase;
-    color: black;
-}
-/* main section */
-main{
-    height: 200vh;
-    width: 100vw;
-    color: brown;
-    background: black;
-    display: flex;
-}
-main .main-image{
-    margin: 150px 0 0 200px;
-}
-main .main-image img{
-    width: 200px;
-}
-main .main-content{
-    margin: 150px 0 0 100px;
-    font-size: 50px;
+
+footer{
+    margin: 0;
+    background: #000;
     color: white;
+    height: 2lh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-transform: uppercase;
 }
-.active-button{
-    text-decoration: underline;
+/* extra */
+a{
+    color: white;
+    text-decoration: none;
+}
+.active-nav{
+    box-shadow: 0 0 10px 5px white;
 }
